// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Add Recipient item should render with exchange amount 1`] = `
<DocumentFragment>
  <div
    class="mt-3 border-b border-dashed border-theme-secondary-300 pb-4 dark:border-theme-secondary-800"
    data-testid="AddRecipientItem"
  >
    <div
      class="flex flex-col items-center space-y-4 sm:flex-row sm:space-x-4 sm:space-y-0"
    >
      <div
        class="hidden sm:block"
      >
        <div
          class="shrink-0 css-8d0u1i"
          data-testid="Avatar"
        >
          <div
            class="inline-flex h-full w-full items-center justify-center overflow-hidden rounded-full align-middle"
          >
            <img
              alt="D8rr7B1d6TL6pf14LgMz4sKp1VBMs6YUYD"
              src="data:image/svg+xml;utf8,<svg version=\\"1.1\\" xmlns=\\"http://www.w3.org/2000/svg\\" class=\\"picasso\\" width=\\"100\\" height=\\"100\\" viewBox=\\"0 0 100 100\\"><style>.picasso circle{mix-blend-mode:soft-light;}</style><rect fill=\\"rgb(0, 150, 136)\\" width=\\"100\\" height=\\"100\\"/><circle r=\\"50\\" cx=\\"80\\" cy=\\"50\\" fill=\\"rgb(76, 175, 80)\\"/><circle r=\\"35\\" cx=\\"100\\" cy=\\"40\\" fill=\\"rgb(156, 39, 176)\\"/><circle r=\\"40\\" cx=\\"90\\" cy=\\"70\\" fill=\\"rgb(3, 169, 244)\\"/></svg>"
              title="D8rr7B1d6TL6pf14LgMz4sKp1VBMs6YUYD"
            />
          </div>
        </div>
      </div>
      <div
        class="flex w-full flex-1 flex-row items-center space-x-4 overflow-auto sm:flex-col sm:items-start sm:space-y-1 sm:space-x-0"
      >
        <div
          class="whitespace-nowrap font-semibold text-theme-secondary-500 dark:text-theme-secondary-700"
        >
          Recipient #2
        </div>
        <div
          class="max-w-full overflow-auto sm:w-full"
        >
          <div
            class="no-ligatures flex overflow-hidden whitespace-nowrap items-center space-x-2 w-full"
          >
            <span
              class="font-semibold text-base text-theme-text"
              data-testid="Address__alias"
            >
              <span
                class="css-u3jrna"
                data-testid="TruncateEnd"
              >
                ARK Wallet 1
              </span>
            </span>
            <span
              class="min-w-0 overflow-hidden text-theme-secondary-500 dark:text-theme-secondary-700 font-semibold text-base"
              data-testid="Address__address"
            >
              D8rr7B1d6TL6pf14LgMz4sKp1VBMs6YUYD
            </span>
          </div>
        </div>
        <div
          class="sm:hidden"
        >
          <div
            class="shrink-0 css-1vy2z2u"
            data-testid="Avatar"
          >
            <div
              class="inline-flex h-full w-full items-center justify-center overflow-hidden rounded-full align-middle"
            >
              <img
                alt="D8rr7B1d6TL6pf14LgMz4sKp1VBMs6YUYD"
                src="data:image/svg+xml;utf8,<svg version=\\"1.1\\" xmlns=\\"http://www.w3.org/2000/svg\\" class=\\"picasso\\" width=\\"100\\" height=\\"100\\" viewBox=\\"0 0 100 100\\"><style>.picasso circle{mix-blend-mode:soft-light;}</style><rect fill=\\"rgb(0, 150, 136)\\" width=\\"100\\" height=\\"100\\"/><circle r=\\"50\\" cx=\\"80\\" cy=\\"50\\" fill=\\"rgb(76, 175, 80)\\"/><circle r=\\"35\\" cx=\\"100\\" cy=\\"40\\" fill=\\"rgb(156, 39, 176)\\"/><circle r=\\"40\\" cx=\\"90\\" cy=\\"70\\" fill=\\"rgb(3, 169, 244)\\"/></svg>"
                title="D8rr7B1d6TL6pf14LgMz4sKp1VBMs6YUYD"
              />
            </div>
          </div>
        </div>
      </div>
      <div
        class="flex w-full flex-row items-center space-x-4 overflow-auto sm:w-auto sm:flex-col sm:items-start sm:space-y-1 sm:space-x-0 sm:pl-7"
      >
        <div
          class="whitespace-nowrap font-semibold text-theme-secondary-500 dark:text-theme-secondary-700"
        >
          <span
            class="hidden sm:inline"
            data-testid="AddRecipientItem--exchangeAmount"
          >
            <span
              class="whitespace-nowrap"
              data-testid="Amount"
            >
              $0.00
            </span>
          </span>
          <span
            class="sm:hidden"
          >
            Amount
          </span>
        </div>
        <div
          class="flex flex-1 justify-end font-semibold text-theme-secondary-700 dark:text-theme-secondary-200 sm:text-theme-secondary-900"
        >
          <span
            class="whitespace-nowrap"
            data-testid="Amount"
          >
            1 DARK
          </span>
        </div>
      </div>
      <div
        class="w-full sm:w-auto"
      >
        <button
          class="w-full sm:w-auto css-1cp5yjb"
          data-testid="AddRecipientItem--deleteButton"
          type="button"
        >
          <div
            class="flex items-center space-x-2"
          >
            <div
              class="flex items-center space-x-2 py-1"
            >
              <div
                class="css-v0ob3f"
                height="16"
                width="16"
              >
                <svg>
                  trash.svg
                </svg>
              </div>
              <div
                class="block sm:hidden"
              >
                Remove
              </div>
            </div>
          </div>
        </button>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`Add Recipient item should render without exchange amount 1`] = `
<DocumentFragment>
  <div
    class="mt-3 border-b border-dashed border-theme-secondary-300 pb-4 dark:border-theme-secondary-800"
    data-testid="AddRecipientItem"
  >
    <div
      class="flex flex-col items-center space-y-4 sm:flex-row sm:space-x-4 sm:space-y-0"
    >
      <div
        class="hidden sm:block"
      >
        <div
          class="shrink-0 css-8d0u1i"
          data-testid="Avatar"
        >
          <div
            class="inline-flex h-full w-full items-center justify-center overflow-hidden rounded-full align-middle"
          >
            <img
              alt="D8rr7B1d6TL6pf14LgMz4sKp1VBMs6YUYD"
              src="data:image/svg+xml;utf8,<svg version=\\"1.1\\" xmlns=\\"http://www.w3.org/2000/svg\\" class=\\"picasso\\" width=\\"100\\" height=\\"100\\" viewBox=\\"0 0 100 100\\"><style>.picasso circle{mix-blend-mode:soft-light;}</style><rect fill=\\"rgb(0, 150, 136)\\" width=\\"100\\" height=\\"100\\"/><circle r=\\"50\\" cx=\\"80\\" cy=\\"50\\" fill=\\"rgb(76, 175, 80)\\"/><circle r=\\"35\\" cx=\\"100\\" cy=\\"40\\" fill=\\"rgb(156, 39, 176)\\"/><circle r=\\"40\\" cx=\\"90\\" cy=\\"70\\" fill=\\"rgb(3, 169, 244)\\"/></svg>"
              title="D8rr7B1d6TL6pf14LgMz4sKp1VBMs6YUYD"
            />
          </div>
        </div>
      </div>
      <div
        class="flex w-full flex-1 flex-row items-center space-x-4 overflow-auto sm:flex-col sm:items-start sm:space-y-1 sm:space-x-0"
      >
        <div
          class="whitespace-nowrap font-semibold text-theme-secondary-500 dark:text-theme-secondary-700"
        >
          Recipient #2
        </div>
        <div
          class="max-w-full overflow-auto sm:w-full"
        >
          <div
            class="no-ligatures flex overflow-hidden whitespace-nowrap items-center space-x-2 w-full"
          >
            <span
              class="font-semibold text-base text-theme-text"
              data-testid="Address__alias"
            >
              <span
                class="css-u3jrna"
                data-testid="TruncateEnd"
              >
                ARK Wallet 1
              </span>
            </span>
            <span
              class="min-w-0 overflow-hidden text-theme-secondary-500 dark:text-theme-secondary-700 font-semibold text-base"
              data-testid="Address__address"
            >
              D8rr7B1d6TL6pf14LgMz4sKp1VBMs6YUYD
            </span>
          </div>
        </div>
        <div
          class="sm:hidden"
        >
          <div
            class="shrink-0 css-1vy2z2u"
            data-testid="Avatar"
          >
            <div
              class="inline-flex h-full w-full items-center justify-center overflow-hidden rounded-full align-middle"
            >
              <img
                alt="D8rr7B1d6TL6pf14LgMz4sKp1VBMs6YUYD"
                src="data:image/svg+xml;utf8,<svg version=\\"1.1\\" xmlns=\\"http://www.w3.org/2000/svg\\" class=\\"picasso\\" width=\\"100\\" height=\\"100\\" viewBox=\\"0 0 100 100\\"><style>.picasso circle{mix-blend-mode:soft-light;}</style><rect fill=\\"rgb(0, 150, 136)\\" width=\\"100\\" height=\\"100\\"/><circle r=\\"50\\" cx=\\"80\\" cy=\\"50\\" fill=\\"rgb(76, 175, 80)\\"/><circle r=\\"35\\" cx=\\"100\\" cy=\\"40\\" fill=\\"rgb(156, 39, 176)\\"/><circle r=\\"40\\" cx=\\"90\\" cy=\\"70\\" fill=\\"rgb(3, 169, 244)\\"/></svg>"
                title="D8rr7B1d6TL6pf14LgMz4sKp1VBMs6YUYD"
              />
            </div>
          </div>
        </div>
      </div>
      <div
        class="flex w-full flex-row items-center space-x-4 overflow-auto sm:w-auto sm:flex-col sm:items-start sm:space-y-1 sm:space-x-0 sm:pl-7"
      >
        <div
          class="whitespace-nowrap font-semibold text-theme-secondary-500 dark:text-theme-secondary-700"
        >
          <span>
            Amount
          </span>
        </div>
        <div
          class="flex flex-1 justify-end font-semibold text-theme-secondary-700 dark:text-theme-secondary-200 sm:text-theme-secondary-900"
        >
          <span
            class="whitespace-nowrap"
            data-testid="Amount"
          >
            1 DARK
          </span>
        </div>
      </div>
      <div
        class="w-full sm:w-auto"
      >
        <button
          class="w-full sm:w-auto css-1cp5yjb"
          data-testid="AddRecipientItem--deleteButton"
          type="button"
        >
          <div
            class="flex items-center space-x-2"
          >
            <div
              class="flex items-center space-x-2 py-1"
            >
              <div
                class="css-v0ob3f"
                height="16"
                width="16"
              >
                <svg>
                  trash.svg
                </svg>
              </div>
              <div
                class="block sm:hidden"
              >
                Remove
              </div>
            </div>
          </div>
        </button>
      </div>
    </div>
  </div>
</DocumentFragment>
`;
